--- a/assignments/gallery/styles/styles.css
+++ b/assignments/gallery/styles/styles.css
@@ -23,8 +23,8 @@ header{
 /*Main Start*/
 main{
     background-color: whitesmoke;
-    height: 500px;
-    padding-top: 10px
+    padding-bottom: 10px
+    padding-top: 10px;
 }
 
 #main-gallery {
@@ -50,13 +50,29 @@ background-color: powderblue;
 margin: 0, 10px
 }
 
-#flexbox-gallery div{
+#flexbox-gallery > div{
 flex-grow: 1;
 background-color: white;
 margin: 10px
 }
 
+#grid-gallery{
+    display: grid;
+    height: 300px;
+    background-color: lightcoral;
+    margin: 10px;
+    margin-bottom: 0;
+}
+
+#grid-gallery:first-child {
+
+}
+
+#grid-gallery:nth-child(2)
+
 /*Main End*/
+
+/*Footer Start*/
 
 footer{
     background-color:whitesmoke;
@@ -64,3 +80,4 @@ footer{
     margin-bottom:0;
 }
 
+/*Footer End*/
