--- a/assignments/gallery/styles/styles.css
+++ b/assignments/gallery/styles/styles.css
@@ -23,7 +23,7 @@ header{
 /*Main Start*/
 main{
     background-color: whitesmoke;
-    padding-bottom: 10px
+    padding-bottom: 10px;
     padding-top: 10px;
 }
 
@@ -47,13 +47,14 @@ margin: 10px;
 display: flex;
 height: 300px;
 background-color: powderblue;
-margin: 0, 10px
+margin: 0 10px
 }
 
 #flexbox-gallery > div{
 flex-grow: 1;
 background-color: white;
-margin: 10px
+margin: 10px;
+border-radius: 10px;
 }
 
 #grid-gallery{
@@ -62,21 +63,40 @@ margin: 10px
     background-color: lightcoral;
     margin: 10px;
     margin-bottom: 0;
+    grid-template-rows: 1fr;
+    grid-template: 1fr/ 1fr 1fr 1fr
+
 }
 
-#grid-gallery:first-child {
-
+#grid-gallery div:first-child {
+grid-row-start: 1;
+grid-row-end: 2;
+grid-column-start: 1;
+grid-row-end: 2;
+background-color: white;
+margin: 10px
 }
 
-#grid-gallery:nth-child(2)
+#grid-gallery div:nth-child(2) {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-color:white;
+    margin: 10px;
+}
 
+#grid-gallery div:last-child {
+
+    grid-area:1/3/2/4;
+    background-color: white;
+    margin:10px;
+}
 /*Main End*/
 
 /*Footer Start*/
 
 footer{
     background-color:whitesmoke;
-    background-color: white;
+    height: 100px;
     margin-bottom:0;
 }
 
