--- a/assignments/gallery/styles/styles.css
+++ b/assignments/gallery/styles/styles.css
@@ -1,6 +1,6 @@
 /*Global*/
 
-#container{
+#container {
     background-color: grey;
     width: 80%;
     padding-top: 10px;
@@ -8,96 +8,106 @@
     margin: 0 auto
 }
 
-header,main,footer{ 
+header,
+main,
+footer {
     margin: 10px
 }
 
- /*Header Start*/
-header{
+/*Header Start*/
+
+header {
     background-color: whitesmoke;
     height: 200px;
     margin-top: 0;
 }
+
 /*Header End*/
 
 /*Main Start*/
-main{
+
+main {
     background-color: whitesmoke;
     padding-bottom: 10px;
     padding-top: 10px;
 }
 
 #main-gallery {
-    background-color:peachpuff;
-    height:300px;
+    background-color: peachpuff;
+    height: 300px;
     margin: 0 10px 10px 10px;
     text-align: center;
-    padding-bottom:20px;
+    padding-bottom: 20px;
 }
 
-#main-gallery > div{
-    background-color:white;
+#main-gallery>div {
+    background-color: white;
     width: 30%;
     height: 100%;
     display: inline-block;
-margin: 10px;
+    margin: 10px;
 }
 
 #flexbox-gallery {
-display: flex;
-height: 300px;
-background-color: powderblue;
-margin: 0 10px
-}
-
-#flexbox-gallery > div{
-flex-grow: 1;
-background-color: white;
-margin: 10px;
-border-radius: 10px;
-}
-
-#grid-gallery{
-    display: grid;
+    display: flex;
     height: 300px;
+    background-color: powderblue;
+    margin: 0 10px;
+    border-radius: 10px;
+}
+
+#flexbox-gallery>div {
+    flex-grow: 1;
+    background-color: white;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+#grid-gallery {
+    display: grid;
     background-color: lightcoral;
     margin: 10px;
     margin-bottom: 0;
     grid-template-rows: 1fr;
     grid-template: 1fr/ 1fr 1fr 1fr
-
 }
 
 #grid-gallery div:first-child {
-grid-row-start: 1;
-grid-row-end: 2;
-grid-column-start: 1;
-grid-row-end: 2;
-background-color: white;
-margin: 10px
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-row-end: 2;
+    background-color: white;
+    margin: 10px
 }
 
 #grid-gallery div:nth-child(2) {
     grid-row: 1/2;
     grid-column: 2/3;
-    background-color:white;
+    background-color: white;
     margin: 10px;
 }
 
 #grid-gallery div:last-child {
-
-    grid-area:1/3/2/4;
+    grid-area: 1/3/2/4;
     background-color: white;
-    margin:10px;
+    margin: 10px;
 }
+
+#grid-gallery>div img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 /*Main End*/
 
 /*Footer Start*/
 
-footer{
-    background-color:whitesmoke;
+footer {
+    background-color: whitesmoke;
     height: 100px;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
 /*Footer End*/
